@@ -1,3 +1,8 @@
+2021-10-04  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/evaluate.h: Standardize all example functions on two arguments
+	* src/devol.cpp (putFunPtrInXPtr): Idem
+
 2021-05-08  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (URL, BugReports): Added links
